libs/@local/hashql/hir/tests/ui/lower/inference/ctor-bounded-invalid.jsonc
//@ run: fail
//@ description: Test that type inference works for type constructors
["newtype", "Person<T: Number>", "T", ["Person", { "#literal": "2" }]]
//~^ ERROR Type variable has incompatible upper and lower bounds
